tittre à supprimer  index.html #10

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>Culture du développeur</title>
 	</head>
 	<body>
+		Du texte
 		<h1>Le travail de la Dream Team Avril (DTA) </h1>
 	</body>
 
