--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!doctype html>
 <html>
-
 	<head>
-		<title>Culture du développeur</title>
+		<meta charset="UTF-8" />
+		<title>L'internet des objets</title>
 	</head>
 	<body>
-		<h1>Le travail de la Dream Team Avril (DTA) </h1>
+		<h1>L'internet des objets</h1>
+		<p>
+			<img alt='internet of things' src="iot.jpg" />
+			L'internet des objets ou Web 3.0 est le terme qui désigne l'ensemble des objets connectés au réseau internet.
+		</p>
 	</body>
-
 </html>
