ajout paragraphe histoire #8

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 	</head>
 	<body>
 		<h1>L'internet des objets</h1>
-		<p>
+		<p align='center'>
 			<img alt='internet of things' src="iot.jpg" />
+		</p>
+		<p>	
 			L'internet des objets ou Web 3.0 est le terme qui désigne l'ensemble des objets connectés au réseau internet.
 		</p>
 	</body>
