Correction du titre de la page ecosystème-java.html #19

--- a/ecosysteme-java.html
+++ b/ecosysteme-java.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Culture du développeur</title>
+		<title>Ecosysteme Java</title>
 	</head>
 	<body>
 		<h1>Ecosysteme Java</h1>
