Lien vers la présentation de DTA

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<body>
 		Du texte
 		<h1>Le travail de la Dream Team Avril (DTA) </h1>
+		<a href=PresentationDTA.html>DTA</a>
 	</body>
 
 </html>
