--- a/page_metrique.html
+++ b/page_metrique.html
@@ -5,7 +5,16 @@
 		<title>Page sur les métrique</title>
 	</head>
 	<body>
-		<h1>du latin metricus, lui même du grec ancien metrikos(qui peut être mesuré)</h1>
+		
+		<h1>Les métrique</h1>
+		du latin metricus, lui même du grec ancien metrikos(qui peut être mesuré)
+		
+		<h2> le taux d'emploi </h2>
+			
+		représente le niveau de production qui sera facturé aux clients
+		il est directement corrélé à la rentabilité  de l'entreprise 
+		<br><br>
+		TE= #jours produits/(#jours ouvrés - #joursCP,RTT)
 	</body>
 
 </html>
