--- a/types-entreprises.html
+++ b/types-entreprises.html
@@ -2,8 +2,67 @@
 <html>
 <head>
 	<title>Types d'entreprises</title>
+	<meta charset="UTF-8">
 </head>
 <body>
 	<h1>Types d'entreprises</h1>
+
+	<p>Dans le secteur du numérique, on distingue 4 types d'entreprises : les sociétés de services, les cabinets de conseil, les éditeurs de logiciels et les startup.</p>
+
+	<h2>Sociétés de services</h2>
+	<p><b>ESN : </b>Entreprises de Service du Numérique</p>
+	<p><b>SSII : </b>Société de Services et d’Ingénierie Informatique</p>
+	<p>ESN et SSII, c’est la même chose :-)</p>
+	<p>
+		Ces structures apportent des compétences techniques à leurs clients en réalisant des missions d’assistance technique (aussi appelée « régie »), de conseil, de formation ou des projets avec un engagement de résultats.
+	</p>
+
+	<h2>Cabinets de conseil</h2>
+	<p>
+		C’est le cousin de la société de services.<br><br>
+		Souvent, un cabinet de conseil se positionne sur
+		la partie amont de la réalisation des
+		développements :
+	</p>
+	<ul>
+		<li>Assistance auprès de la maîtrise d’ouvrage</li>
+		<li>Conseils</li>
+		<li>Expertise</li>
+	</ul>
+	<p>
+		De part son positionnement et ses profils généralement plus expérimentés (…), un cabinet de conseil pratique des prix plus élevés qu’une ESN…
+	</p>
+
+	<h2>Editeurs de logiciels</h2>
+	<p>
+		Un éditeur assure la conception, le développement
+		et la commercialisation de progiciels (logiciels
+		standards).
+	</p>
+	<p>
+		Dans son parcours, il s’agit souvent d’une ESN qui
+		s’est positionnée sur un marché particulier.
+	</p>
+	<p>
+		Ce type de structure gère des versions d’un produit
+		logiciel ou d’une gamme de produits et de services
+		associés.
+	</p>
+	<p>
+		<b>Des éditeurs connus ?</b><br><br>
+		Apple, Atlassian, Cegid, Dassault, Deezer, Fiducial,
+		Microsoft, Oracle, SAP, Spotify, Talend, Trello,
+		Ubisoft, ...
+	</p>
+
+	<h2>Startups</h2>
+	<p>
+		La startup (ou jeune pousse) est une jeune entreprise innovante à fort potentiel de croissance qui fait souvent l'objet de levée de fonds.
+	</p>
+
+	<p>
+		On parle également de startup pour des entreprises en construction qui ne sont pas encore lancées sur le marché commercial (ou seulement à titre expérimental). Elle est en phase plus ou moins longue de développement d'un produit, de test d'une idée, de validation d'une technologie ou d'un modèle économique. Le risque d'échec est supérieur aux entreprises traditionnelles du fait des petites tailles et du manque de visibilité de ces structures.
+	</p>
+
 </body>
 </html>
