ajout d'une page
ajout de la page 2 de métrique, avec un exemple sur le taux d'emploi

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<body>
 		Du texte
 		<h1>Le travail de la Dream Team Avril (DTA) </h1>
+	
+	<p>allez a la page 2 <a href="page_metrique2.html">la page 2</a> ?</p>
+
 	</body>
 
 </html>
