--- a/presentation-formation.html
+++ b/presentation-formation.html
@@ -3,13 +3,37 @@
 	<head>
 		<meta charset="utf-8"/>
 		<title>Présentaion formation DTA</title>
+		<style>
+			h1 {
+				text-align: center;
+				color: red;
+				text-decoration: underline;
+			}
+			h2 {
+				color: blue;
+				text-decoration: underline;
+			}
+			p {
+				font-size: 1.1em;
+			}
+			li.square {
+				list-style-type: square;
+			}
+			img.logo {
+				margin: 20px 20px 20px 50px;
+				float: right;
+				height: 100%;
+			}
+		</style>
 	</head>
 	<body>
-		<img src="http://www.dta-ingenierie.fr/img/logoDTA2.png"/>
 		<h1>Formation DTA</h1>
-		<p>DTA Ingénierie propose aux futures jeunes recrues 3 cycles de formation accélérée. Professionnalisantes, ces formations se déroulent sur des périodes entre 50 et 57 jours, avec projet "tutoré" en fin de cycle. Elles sont complétées par des ateliers "savoir-être".</p>
-		<p>Chaque cursus de formation allie 40% de théorie et 60% de pratique. Les différents modules sont évalués sous forme de QCM, suivi d'un débrief sur les principaux points de blocage rencontrés.</p>
-		<p>Chaque participant finalise sa formation par un projet de développement reprenant l'essentiel des notions abordées. Piloté en méthodes  agiles, ce projet "tutoré" permet à l''équipe pédagogique d'évaluer, puis de valider - ou non - l'acquisition des nouvelles compétences.</p>
+		<div>
+			<img class="logo" src="http://www.dta-ingenierie.fr/img/logoDTA2.png"/>
+			<p>DTA Ingénierie propose aux futures jeunes recrues 3 cycles de formation accélérée. Professionnalisantes, ces formations se déroulent sur des périodes entre 50 et 57 jours, avec projet "tutoré" en fin de cycle. Elles sont complétées par des ateliers "savoir-être".</p>
+			<p>Chaque cursus de formation allie 40% de théorie et 60% de pratique. Les différents modules sont évalués sous forme de QCM, suivi d'un débrief sur les principaux points de blocage rencontrés.</p>
+			<p>Chaque participant finalise sa formation par un projet de développement reprenant l'essentiel des notions abordées. Piloté en méthodes  agiles, ce projet "tutoré" permet à l''équipe pédagogique d'évaluer, puis de valider - ou non - l'acquisition des nouvelles compétences.</p>
+		</div>
 		<h2>Le parcours</h2>
 		<p>
 			<ul>
@@ -37,7 +61,7 @@
 		Concepteur Développeur JAVA-JEE<br/>
 		(57 jours - 399 h)
 			<ul>
-				<li>Le métier de Concepteur-Développeur JAVA JEE</li>
+				<li class="square">Le métier de Concepteur-Développeur JAVA JEE</li>
 				<ul>
 					<li>Culture du développeur</li>
 					<li>Gestion des sources avec Git</li>
@@ -45,7 +69,7 @@
 					<li>Développement Personnel - Savoir-être & Communication</li>
 					<li>Introduction à l'agilité</li>
 				</ul>
-				<li>Développement JAVA</li>
+				<li class="square">Développement JAVA</li>
 				<ul>
 					<li>Langage Java - Approche impérative</li>
 					<li>Langage Java - Approche orientée objet</li>
@@ -53,29 +77,29 @@
 					<li>Design pattern Java</li>
 					<li>Langage Java - Java 8</li>
 				</ul>
-				<li>Industrialisation des développements et Usine logicielle</li>
+				<li class="square">Industrialisation des développements et Usine logicielle</li>
 				<ul>
 					<li>Maven - Gestion du cycle de vie d'un projet</li>
 					<li>Intégration Continue avec Jenkins + Sonar + Nexus</li>
 				</ul>
-				<li>Traitement des données</li>
+				<li class="square">Traitement des données</li>
 				<ul>
 					<li>Langage SQL - Pratique de MySQL</li>
 					<li>Java - Accès à une base de données relationnelle (JDBC & JPA)</li>
 				</ul>
-				<li>Développement web front-end</li>
+				<li class="square">Développement web front-end</li>
 				<ul>
 					<li>HTTP & HTML 5 </li>
 					<li>Introduction à JavaScript + jQuery</li>
 					<li>Introduction à CSS et frameworks CSS (Twitter Bootstrap)</li>
 				</ul>
-				<li>Développement JavaEE</li>
+				<li class="square">Développement JavaEE</li>
 				<ul>
 					<li>Développement Web avec Java EE (Servlet, JSP, TagLibs)</li>
 					<li>EJB : Composants métiers avec Java EE</li>
 					<li>JAX-RS : REST avec Java EE </li>
 				</ul>
-				<li>Développement Back-End avec Spring Framework</li>
+				<li class="square">Développement Back-End avec Spring Framework</li>
 				<ul>
 					<li>Spring Framework - Core</li>
 					<li>Spring Framework - Accès aux données (JDBC, ORM & Data)</li>
@@ -83,14 +107,14 @@
 					<li>Spring Framework - Présentation (Web, MVC & Services REST)</li>
 					<li>Spring Framework - Boot & Security</li>
 				</ul>
-				<li>Développement Front-End avec AngularJS</li>
+				<li class="square">Développement Front-End avec AngularJS</li>
 				<ul>
 					<li>Outillage Front-End (NodeJS, NPM,...)</li>
 					<li>Javascript avancé</li>
 					<li>Développer des applications Web riches avec AngularJS</li>
 					<li>Tests Front-End (Karma, Jasmine, Protractor)</li>
 				</ul>
-				<li>Atelier : finalisation du projet global</li>
+				<li class="square">Atelier : finalisation du projet global</li>
 				<ul>
 					<li>Cycle de vie d’un projet et mise en place de Scrum</li>
 					<li>Projet Java EE, Spring Framework & AngularJS - Partie1</li>
