ajout d'un lien sur la page index vers métrique
ajout d'une ligne permettant d'aller a la page metrique depuis l'index

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<body>
 		Du texte
 		<h1>Le travail de la Dream Team Avril (DTA) </h1>
-	
-	<p>allez a la page 2 <a href="page_metrique2.html">la page 2</a> ?</p>
+		
+	<p>allez a la <a href="page_metrique.html"> page sur les métrique</a> ?</p>
 
 	</body>
 
