ajout link au fichier default.css dans les fichiers .html #24

--- a/page_metrique.html
+++ b/page_metrique.html
@@ -3,6 +3,7 @@
 
 	<head>
 		<title>Page sur les métrique</title>
+		<link rel="stylesheet" type="text/css" href="style/default.css">
 	</head>
 	<body>
 		
