--- a/PresentationDTA.html
+++ b/PresentationDTA.html
@@ -3,6 +3,7 @@
 
 	<head>
 		<title>Presentation de DTA</title>
+		<link rel="stylesheet" type="text/css" href="style/default.css">
 	</head>
 	<body>
 		<h1>Vive le ouèbe</h1>
