--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 	<head>
 		<title>Culture du développeur</title>
+		<link rel="stylesheet" type="text/css" href="style/default.css">
 	</head>
 	<body>
 		Du texte
