ajout link CSS pour ecosysteme_front_end.html

--- a/ecosysteme_front_end.html
+++ b/ecosysteme_front_end.html
@@ -3,6 +3,7 @@
 
 	<head>
 		<title>Écosystème front-end</title>
+		<link rel="stylesheet" type="text/css" href="style/default.css">
 	</head>
 	<body>
 		
