--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		Du texte
 		<h1>Le travail de la Dream Team Avril (DTA) </h1>
 		<a href=PresentationDTA.html>DTA</a>
+		<a href=types-entreprises.html>Types d'entreprises</a>
 	</body>
 
 </html>
