mise-à-jour du fichier ecosysteme_front_end.html

--- a/ecosysteme_front_end.html
+++ b/ecosysteme_front_end.html
@@ -8,18 +8,38 @@
 	<body>
 		
 		<h1>Écosystème front-end</h1>
+		<p><a href="index.html">Retour à l'accueil</a></p>
+		
+		<h2>Librairies</h2>
 		
 		<ul>
-			<li>A</li>
-			<li>A</li>
-			<li>A</li>
+			<li>jQuery</li>
+			<li>Backbone.js</li>
+			<li>Underscore.js</li>
+			<li>Lo</li>
 		</ul>
 		
+		<h2>Frameworks</h2>
+		
 		<ul>
-			<li>B</li>
-			<li>B</li>
-			<li>B</li>
+			<li>Angular.js</li>
+			<li>Ember</li>
+			<li>ExtJS</li>
 		</ul>
+		
+		
+		<h2>Outillage</h2>
+		
+		<ul>
+			<li>Jasmine</li>
+			<li>Karma</li>
+			<li>Grunt</li>
+			<li>Gulp</li>
+			<li>Bower</li>
+		</ul>
+		
+		
+		<p><a href="#">Haut de la page</a></p>
 		
 	</body>
 
