--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		Du texte
 		<h1>Le travail de la Dream Team Avril (DTA) </h1>
 		<a href=PresentationDTA.html>DTA</a>
+		<a href="presentation-formation.html">Présentation formation</a>
 	</body>
 
 </html>
