--- a/PresentationDTA.html
+++ b/PresentationDTA.html
@@ -6,7 +6,10 @@
 		<link rel="stylesheet" type="text/css" href="style/default.css">
 	</head>
 	<body>
-		<h1>Vive le ouèbe</h1>
+		<a href="index.html">Accueil</a>
+		<h1>Présentation de DTA</h1>
+		Des Talents Audacieux
+		Entreprise créée en 2014
 	</body>
 
 </html>
