--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 
 
 		<a href=PresentationDTA.html>DTA</a>
+	
+	<p>allez a la <a href="page_metrique.html"> page sur le NO-SQL</a> ?</p>
 
+
+		<a href=page_nosql.html >DTA</a>
 	</body>
 
 </html>
