màj encodage et création d'un menu dans la page d'index

--- a/ecosysteme_front_end.html
+++ b/ecosysteme_front_end.html
@@ -1,9 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 
 	<head>
 		<title>Écosystème front-end</title>
-		<link rel="stylesheet" type="text/css" href="style/default.css">
+		<link rel="stylesheet" type="text/css" href="style/default.css" />
+		<meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1" />
 	</head>
 	<body>
 		
@@ -25,9 +26,7 @@
 			<li>Angular.js</li>
 			<li>Ember</li>
 			<li>ExtJS</li>
-		</ul>
-		
-		
+		</ul
 		<h2>Outillage</h2>
 		
 		<ul>
@@ -37,7 +36,6 @@
 			<li>Gulp</li>
 			<li>Bower</li>
 		</ul>
-		
 		
 		<p><a href="#">Haut de la page</a></p>
 		
