contenue de la page developpeur

--- a/developpeur.html
+++ b/developpeur.html
@@ -5,7 +5,28 @@
 		<title>C'est quoi un developpeur</title>
 	</head>
 	<body>
-		<h1>Le travail de la Dream Team Avril (DTA) </h1>
+		<h1>un développeur c'est quoi ?</h1>
+
+		Selon le dictionnaire de la langue française, le terme « développeur » s'applique en informatique à une personne ou une société qui développe et conçoit des logiciels.
+		
+		<h1>Aspects du travail</h1>
+Pour répondre aux besoins d'un client, il établit dans un premier temps un "Dossier d'opportunité" qui détermine les besoins du client en matière d'informatisation et contrôle, poste par poste, la nécessité de l’informatisation (un poste pouvant parfois être plus performant sans informatisation, qu'avec). Il s'agit ici d'une phase cruciale puisqu'il faut non seulement répondre aux besoins présents du client, mais aussi, concevoir un système informatique qui accompagnera le client dans l'évolution de ses activités.
+
+Dans un second temps il développe une solution technique (Hardware) et crée un modèle (analyse organique) du futur logiciel (software) gérant le futur système informatique (s'il n'existe pas).
+
+Il écrit ensuite des lignes de code nécessaires au correct fonctionnement (programmation), participe aux phases d'essais, réalise la documentation technique, s'occupe du suivi et de la maintenance de son produit. Il peut également former les utilisateurs.
+
+Ses responsabilité principales sont :
+
+<h1>Le travail d’équipe</h1>
+L'équipe projet travaille à la réalisation du logiciel correspondant aux besoins du client.
+La conception (design)
+À partir d’un cahier des charges (software requirement specifications – SRS ou user requirement specifications), le développeur doit définir les spécifications techniques du programme : structure des données, communication entre les modules…
+Les tests
+Les tests servent à détecter les non-conformités et les erreurs (bugs), et à la non-régression.
+La maintenance 
+Dans certaines situations, la maintenance est gérée à part du cycle initial de développement.
+Plusieurs méthodes de développement existent, mais la méthode la plus ancienne de développement est sûrement celle qu'on appelle Cycle en V[réf. nécessaire]. De nos jours, de plus en plus d'entreprises adoptent toutefois un modèle de développement où l'humain est davantage placé au cœur du processus de production (on parle de Méthodes agiles ou parfois d'Agilité).
 	</body>
 
 </html>
