création dossier img #29

--- a/iot.html
+++ b/iot.html
@@ -8,14 +8,14 @@
 	<body>
 		<h1  align="center">L'internet des objets</h1>
 		<p align='center'>
-			<img alt='internet of things' src="iot.jpg" />
+			<img alt='internet of things' src="img/iot.jpg" />
 		</p>
 		<p>	
 			L'internet des objets ou Web 3.0 est le terme qui désigne l'ensemble des objets connectés au réseau internet.
 		</p>
 		<h2 align="center"> Historique et perspectives</h2>
 		<p align='center'>
-			<img alt='internet of things' src="historique-iot.png" />
+			<img alt='internet of things' src="img/historique-iot.png" />
 		</p>
 		<p>
 			Au début des années 2000, des ingénieurs ont commencé à ajouter des puces RFiD à des objets afin de les superviser à distance,<br /> puis peu à peu des objets pouvant communiquer à travers la pile TCP/IP sont apparus devenant des <i>objets connect&eacute;s</i>
@@ -27,7 +27,7 @@
 		</p>
 		<h2 align="center"> Montres connectées</h2>
 		<p align='center'>
-			<img alt='smartwatch' src="smartwatch.jpg" />
+			<img alt='smartwatch' src="img/smartwatch.jpg" />
 		</p>
 		<p>
 			Véritables bijous de technologie, les montres connectées sont apparues à la fin des ann&eacute;es 2000.<br /> Ces objets permettent via une connection bluetooth de déporter l'&eacute;cran du t&eacute;l&eacute;phone associ&eacute; mais aussi de se connecter à internet via une connection TCP/IP ou via le réseau mobile.<br />
