--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 		
 	<p>allez a la <a href="page_metrique.html"> page sur les métrique</a> ?</p>
+	<p><a href="Page_Methodo\PageMethodo.html"> Page : Gestion de projet</a> ?</p>
 
 
 		<a href=PresentationDTA.html>DTA</a>
