--- a/index.html
+++ b/index.html
@@ -1,12 +1,79 @@
-<!doctype html>
-<html>
-
-	<head>
-		<title>Culture du développeur</title>
-	</head>
-	<body>
-		Du texte
-		<h1>Le travail de la Dream Team Avril (DTA) </h1>
-	</body>
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+<title>Home - Home Page | Interior Art - Free Website Template from Templates.com</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="description" content="Place your description here" />
+<meta name="keywords" content="put, your, keyword, here" />
+<meta name="author" content="Templates.com - website templates provider" />
+<link href="style.css" rel="stylesheet" type="text/css" />
+<link href="layout.css" rel="stylesheet" type="text/css" />
+<script src="js/jquery-1.4.2.min.js" type="text/javascript"></script>
+<script src="js/cufon-yui.js" type="text/javascript"></script>
+<script src="js/cufon-replace.js" type="text/javascript"></script>
+<script src="js/Myriad_Pro_300.font.js" type="text/javascript"></script>
+<script src="js/Myriad_Pro_400.font.js" type="text/javascript"></script>
+</head>
+<body id="page1">
+<div class="tail-bottom">
+<!-- HEADER -->
+	<div id="header">
+		<div class="row-1">
+			<div class="fleft"><a href="home.html"><img src="images/logoDTA2.png" width="100px" alt="" /></a></div>
+			<div class="fright">
+				<ul>
+					<li><a href="home.html" class="active"><em><b>home</b></em></a></li>
+					<li><a href="about-us.html"><em><b>about us</b></em></a></li>
+					<li><a href="articles.html"><em><b>articles</b></em></a></li>
+					<li><a href="contact-us.html"><em><b>contact us</b></em></a></li>
+					<li><a href="sitemap.html"><em><b>site map</b></em></a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="extra"><img src="images/header-img.jpg" alt="" /></div>
+	</div>
+<!-- CONTENT -->
+	<div id="content">
+		<div class="tail-middle2">
+			<div class="row-2">
+				<div class="indent3">
+					<div class="container">
+						<div class="col-2">
+							<h3>Présentation de la <b>Dream Team</b> du site</h3>
+							<div class="indent2">
+								<ul class="logo-list">
+									<li><a href="#"><img src="images/extra-logo1.gif" alt="" /></a></li>
+									<li><a href="#"><img src="images/extra-logo2.gif" alt="" /></a></li>
+									<li><a href="#"><img src="images/extra-logo3.gif" alt="" /></a></li>
+									<li><a href="#"><img src="images/extra-logo4.gif" alt="" /></a></li>
+									<li><a href="#"><img src="images/extra-logo3.gif" alt="" /></a></li>
+									<li><a href="#"><img src="images/extra-logo4.gif" alt="" /></a></li>
+								</ul>
+								<ul class="logo-list">
+									<li><a href="#"><img src="images/extra-logo1.gif" alt="" /></a></li>
+									<li><a href="#"><img src="images/extra-logo2.gif" alt="" /></a></li>
+									<li><a href="#"><img src="images/extra-logo3.gif" alt="" /></a></li>
+									<li><a href="#"><img src="images/extra-logo4.gif" alt="" /></a></li>
+									<li><a href="#"><img src="images/extra-logo3.gif" alt="" /></a></li>
+									<li><a href="#"><img src="images/extra-logo4.gif" alt="" /></a></li>
+								</ul>
+							</div>
+						</div>
+						<div class="clear"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+<!-- FOOTER -->
+	<div id="footer">
+		<p class="aligncenter">
+			Copyright - Type in your name here<br />
+			Website template designed by <a href="http://store.templatemonster.com?aff=netsib1" target="_blank" rel="nofollow">www.templatemonster.com</a><br />
+			3D Models provided by <a href="http://www.templates.com/product/3d-models/" target="_blank" rel="nofollow">www.templates.com</a>
+		</p>
+	</div>
+</div>
+<script type="text/javascript"> Cufon.now(); </script>
+</body>
 </html>
