ajout du lien vers ecosysteme dans le menu

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<li><a href="PresentationDTA.html">Présentation DTA</a></li>
 				<li><a href="iot.html">Internet des Objets</a></li>
 				<li><a href="presentation-formation.html">Présentation formation</a></li>
-				<li></li>
+				<li><a href="ecosysteme_front_end.html">Écosystème front-end</a></li>
 			</ul>
 		</div>
 		
@@ -24,8 +24,6 @@
 		<div id="contenu">
 		
 			<h1>Le travail de la Dream Team Avril (DTA) </h1>
-			
-			
 			
 		
 		</div>
