--- a/ecosysteme_front_end.html
+++ b/ecosysteme_front_end.html
@@ -11,6 +11,9 @@
 		<h1>Écosystème front-end</h1>
 		<p><a href="index.html">Retour à l'accueil</a></p>
 		
+		<p>Le "front-end" dans le domaine web désigne tout ce qui entre en contact direct avec le client.<br/>
+		D'une façon générale, cela couvre l'interface graphique et les interactions possibles pour l'utilisateur.</p>
+		
 		<h2>Librairies</h2>
 		
 		<ul>
