--- a/PresentationDTA.html
+++ b/PresentationDTA.html
@@ -12,7 +12,7 @@
 		<h1>Présentation de DTA</h1>
 		DTA : Des Talents Audacieux <br/>
 		Entreprise créée en 2014 <br/>
-		Son but est de permettre à de jeunes ingénieurs en informatique, tout juste diplômés de décrocher leur premier poste.
+		Son but est de permettre à de jeunes ingénieurs en informatique, tout juste diplômés de décrocher leur premier poste. <br/>
 		Plus de détails sur le site de l'entreprise : <br/>
 		<a href="http://www.dta-ingenierie.fr/">http://www.dta-ingenierie.fr/</a>
 	</body>
