quelques modif sur ma bio et index

--- a/page_metrique2.html
+++ b/page_metrique2.html
@@ -3,6 +3,7 @@
 
 	<head>
 		<title>Page sur les métrique</title>
+		<link rel="stylesheet" type="text/css" href="style/default.css">
 	</head>
 	<body>
 		
@@ -16,7 +17,7 @@
 		TE= 16/22-6=100%
 
 		<p>allez a la <a href="page_metrique.html">page 1 </a> ?</p>
-
+		<p><a href="index.html">retour a l'index </a></p>
 		</body>
 
 </html>
