--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
 		<div id="menu">
 			<ul>
 				<li><a href="page_metrique.html">Métriques</a></li>
+				<li><a href="Bio Perchaud.html">Biographie_Perchaud</a></li>
 				<li><a href="PresentationDTA.html">Présentation DTA</a></li>
 				<li><a href="iot.html">Internet des Objets</a></li>
 				<li><a href=types-entreprises.html>Types d'entreprises</a></li>
 				<li><a href="presentation-formation.html">Présentation formation</a></li>
 				<li><a href="Page_Methodo\PageMethodo.html"> Page : Gestion de projet</a></li>
 				<li><a href="page_nosql.html"> page sur le NO-SQL</a></li>
+				
 
 				<li></li>
 			</ul>
