--- a/page_metrique.html
+++ b/page_metrique.html
@@ -17,7 +17,8 @@
 		<br><br>
 		TE= #jours produits/(#jours ouvrés - #joursCP,RTT)
 		
-				<p>allez a la <a href="page_metrique2.html">page 2 </a> ?</p>
+		<p>allez a la <a href="page_metrique2.html">page 2 </a> ?</p>
+		<p><a href="index.html">retour a l'index </a></p>
 
 	</body>
 
