màj CSS et index

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 
 	<head>
@@ -16,7 +16,7 @@
 				<li><a href="PresentationDTA.html">Présentation DTA</a></li>
 				<li><a href="iot.html">Internet des Objets</a></li>
 				<li><a href="types-entreprises.html">Types d'entreprises</a></li>
-				<li><a href="presentation-formation.html">Présentation formation</a></li>
+				<li><a href="presentation-formation.html">Présentation de la formation</a></li>
 				<li><a href="ecosysteme_front_end.html">Écosystème front-end</a></li>
 				<li><a href="Page_Methodo/PageMethodo.html">Page : Gestion de projet</a></li>
 				<li><a href="page_nosql.html">NO-SQL</a></li>
@@ -28,20 +28,11 @@
 		<div id="contenu">
 		
 			<h1>Le travail de la Dream Team Avril (DTA) </h1>
+			<p>Ceci est la page d'index. Elle indexe les autres pages. Ou tout du moins celles qui ont été mises en lien dans le menu. Ou ailleurs. Mais c'est le menu qu'elles auraient dû être.</p>
 			
 		</div>
 		
-
-	<p>allez a la <a href="page_metrique.html"> page sur les métrique</a> ?</p>
-
-
-		<a href=PresentationDTA.html>DTA</a>
-
-		
-		<a href=ecosysteme-java.html>Ecosystème Java</a>
-
-		<a href="iot.html">Internet des Objets</a>
-		<a href="presentation-formation.html">Présentation formation</a>
+		<!-- Si vous cherchez votre lien, regardez dans le cadre de menu (plus haut). -->
 
 
 	</body>
