Ajout text + image #19

--- a/ecosysteme-java.html
+++ b/ecosysteme-java.html
@@ -5,8 +5,17 @@
 	</head>
 	<body>
 		<h1>Ecosysteme Java</h1>
-		- Texte à ajouter -
 		
-		- Photo à ajouter -
+		Quelques technologies back-end :
+		<ul>
+			<li>javac</li>
+			<li>groovyc</li>
+			<li>scalac</li>
+			<li>nashorn</li>
+			<li>JRuby</li>
+		
+		</ul>
+		
+		<img src="images/ecosysteme-back-end.png" alt="Ecosystème back-end" />
 	</body>
 </html>
