--- a/Page_Methodo/PageMethodoEquipeProjet.html
+++ b/Page_Methodo/PageMethodoEquipeProjet.html
@@ -6,7 +6,9 @@
 		<title>DTAFormation : M&eacute;thodologie de gestion de projet</title>
 	</head>
 	<body>
-		<h1>Le r&eacute;f&eacute;rencement </h1>
+		<h1>L'&eacutequipe projet</h1>
+		<h2>La pyramide des besoins de Maslow</h2>
+		<h2>Le developpement d'un equipe</h2>
 	</body>
 
 	<p>
