--- a/Page_Methodo/PageMethodoNaissanceProjet.html
+++ b/Page_Methodo/PageMethodoNaissanceProjet.html
@@ -6,7 +6,17 @@
 		<title>DTAFormation : M&eacute;thodologie de gestion de projet</title>
 	</head>
 	<body>
-		<h1>Le role du commercial </h1>
+		<h1>La naissance d'un projet</h1>
+		<h2>Le r&eacutef&eacuterencement</h2>
+		Le referencement permet a une societe de services ECN ou SSII d'avoir acces aux appels d'offres d'une societe en particulier.<br />
+		
+		<h2>Le role du commercial</h2>
+		<h2>L'avant-vente</h2>
+		<h2>L'expression du besoin</h2>
+		<img src="..\images\ExpressionDuBesoin.jpg" style="width:700px;height:500px;">
+		<h2>Le cahier des charges</h2>
+		<h2>L'appel d'offres</h2>
+		<h2>La soutenance</h2>
 	</body>
 
 	<p>
