réglage de détails

--- a/PresentationDTA.html
+++ b/PresentationDTA.html
@@ -14,7 +14,7 @@
 		Entreprise créée en 2014 <br/>
 		Son but est de permettre à de jeunes ingénieurs en informatique, tout juste diplômés de décrocher leur premier poste. <br/>
 		Plus de détails sur le site de l'entreprise : <br/>
-		<a href="http://www.dta-ingenierie.fr/">http://www.dta-ingenierie.fr/</a>
+		<a href="http://www.dta-ingenierie.fr/" target="_blank">http://www.dta-ingenierie.fr/</a>
 	</body>
 
 </html>
