--- a/Page_Methodo/PageMethodo.html
+++ b/Page_Methodo/PageMethodo.html
@@ -16,6 +16,7 @@
 		
 		<p>
 			<a href=PageMethodoNaissanceProjet.html> Naissance d'un projet </a><br />
+			<a href=PageMethodoEquipeProjet.html> Equipe projet </a> <br />
 			<a href=..\index.html> Retour Index </a><br />
 		</p>
 	</body>
