--- a/PresentationDTA.html
+++ b/PresentationDTA.html
@@ -12,7 +12,7 @@
 		<h1>Pr&eacute;sentation de DTA</h1>
 		DTA : Des Talents Audacieux <br/>
 		Entreprise cr&eacute;&eacute;e en 2014 <br/>
-		Son but est de permettre &agrave de jeunes ingénieurs en informatique, tout juste dipl&ocircm&eacute;s de d&eacute;crocher leur premier poste. <br/>
+		Son but est de permettre &agrave de jeunes ing&eacutenieurs en informatique, tout juste dipl&ocircm&eacute;s de d&eacute;crocher leur premier poste. <br/>
 		Plus de d&eacute;tails sur le site de l'entreprise : <br/>
 		<a href="http://www.dta-ingenierie.fr/" target="_blank">http://www.dta-ingenierie.fr/</a>
 	</body>
