--- a/ecosysteme_front_end.html
+++ b/ecosysteme_front_end.html
@@ -2,17 +2,17 @@
 <html>
 
 	<head>
-		<title>Écosystème front-end</title>
+		<title>Ã‰cosystÃ¨me front-end</title>
 		<link rel="stylesheet" type="text/css" href="style/default.css" />
-		<meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1" />
+		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 	</head>
 	<body>
 		
-		<h1>Écosystème front-end</h1>
-		<p><a href="index.html">Retour à l'accueil</a></p>
+		<h1>Ã‰cosystÃ¨me front-end</h1>
+		<p><a href="index.html">Retour Ã  l'accueil</a></p>
 		
-		<p>Le "front-end" dans le domaine web désigne tout ce qui entre en contact direct avec le client.<br/>
-		D'une façon générale, cela couvre l'interface graphique et les interactions possibles pour l'utilisateur.</p>
+		<p>Le "front-end" dans le domaine web dÃ©signe tout ce qui entre en contact direct avec le client.<br/>
+		D'une faÃ§on gÃ©nÃ©rale, cela couvre l'interface graphique et les interactions possibles pour l'utilisateur.</p>
 		
 		<h2>Librairies</h2>
 		
