mise a jour lien entre page metrique
mise a jour de la navigation entre les pages

--- a/page_metrique.html
+++ b/page_metrique.html
@@ -17,8 +17,7 @@
 		<br><br>
 		TE= #jours produits/(#jours ouvrés - #joursCP,RTT)
 		
-		<p>allez a la <a href="page_metrique2.html">page 2 </a> ?</p>
-		<p><a href="index.html">retour a l'index </a></p>
+		<p><a href="index.html">retour a l'index </a>    ou    <a href="page_metrique2.html">page suivante </a></p>
 
 	</body>
 
