--- a/page_metrique3.html
+++ b/page_metrique3.html
@@ -14,9 +14,8 @@ le niveau de TE d'une SSII qui fonctionne bien se situe entre 85% et 90%
 En dessous, elle perd de l'argent
 Au dessus, elle perd des salariés
 		
-		
-		<p>allez a la <a href="page_metrique.html">page 1 </a> ?</p>
-		<p><a href="index.html">retour a l'index </a></p>
+		<p><a href="page_metrique2.html">page précedente </a>   ou    <a href="index.html">retour a l'index </a>  </p>
+
 		</body>
 
 </html>
