--- a/PresentationDTA.html
+++ b/PresentationDTA.html
@@ -2,18 +2,18 @@
 <html>
 
 	<head>
-		<title>Presentation de DTA</title>
+		<title>Présentation de DTA</title>
 		<link rel="stylesheet" type="text/css" href="style/default.css">
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
 	</head>
 	<body>
 		<a href="index.html">Accueil</a>
-		<h1>Pr&eacute;sentation de DTA</h1>
+		<h1>Présentation de DTA</h1>
 		DTA : Des Talents Audacieux <br/>
-		Entreprise cr&eacute;&eacute;e en 2014 <br/>
-		Son but est de permettre &agrave de jeunes ingénieurs en informatique, tout juste dipl&ocircm&eacute;s de d&eacute;crocher leur premier poste. <br/>
-		Plus de d&eacute;tails sur le site de l'entreprise : <br/>
+		Entreprise créée en 2014 <br/>
+		Son but est de permettre à des jeunes ingénieurs en informatique, tout juste diplômés de décrocher leur premier poste. <br/>
+		Plus de détails sur le site de l'entreprise : <br/>
 		<a href="http://www.dta-ingenierie.fr/" target="_blank">http://www.dta-ingenierie.fr/</a>
 	</body>
 
