Ajout lien sur image 2 #17

--- a/robotique.html
+++ b/robotique.html
@@ -18,7 +18,7 @@
 applications</li>
 </ul>
 		
-		<a href="www.https://www.aldebaran.com/fr"><img src="image/Nao.JPG" alt="Robot Nao" style="width:304px;height:228px;"></a>
+		<a href="https://www.aldebaran.com/fr"><img src="image/Nao.JPG" alt="Robot Nao" style="width:304px;height:228px;"></a>
 		
 		
 	</body>
