--- a/processusappeloffre.html
+++ b/processusappeloffre.html
@@ -12,6 +12,8 @@
 		    <i>Le rôle du commercial</i>
 		    <br><i>L'avant-vente</i><br>
 		    <i>L'expression du besoin</i>
+
+		    <img src="" alt="process-achat" />
 		<h3>Naissance du projet </h2>
 			<i>Le cahier des charges </i>
 			<br><i>La réponse à appel d'offre </i><br>
