--- a/robotique.html
+++ b/robotique.html
@@ -5,6 +5,7 @@
 	<head>
 		<title>Robotique</title>
 		<meta charset="UTF-8"/>
+		<link rel="stylesheet" type="text/css" href="style/default.css" />
 	</head>
 	<body>
 		
