test du template

--- a/article.html
+++ b/article.html
@@ -23,23 +23,8 @@
 			<div class="fright">
 				<ul>
 					<li><a href="home.html"><em><b>home</b></em></a></li>
-					<li><a href="about-us.html"><em><b>about us</b></em></a></li>
-					<li><a href="articles.html" class="active"><em><b>articles</b></em></a></li>
-					<li><a href="contact-us.html"><em><b>contact us</b></em></a></li>
-					<li><a href="sitemap.html"><em><b>site map</b></em></a></li>
 				</ul>
 			</div>
-		</div>
-		<div class="row-2">
-			<ul>
-				<li><a href="#">Home Furniture</a></li>
-				<li><a href="#">Armoire</a></li>
-				<li><a href="#">Bookcases</a></li>
-				<li><a href="#">Coffee Tables</a></li>
-				<li><a href="#">Computer Desks</a></li>
-				<li><a href="#">Corner Desks</a></li>
-				<li><a href="#">Cabinets and Storage</a></li>
-			</ul>
 		</div>
 		<div class="extra"><img src="images/header-img.jpg" alt="" /></div>
 	</div>
@@ -59,23 +44,20 @@
 				<div class="indent3">
 					<div class="container">
 						<div class="col-1">
-							<h3>Latest News</h3>
+							<h3>pages disponible</h3>
 							<ul class="news">
-								<li><a href="#">May 21, 2010</a><p>Lorem ipsum dolor sit amet, con- sectetur adipisicing elit, sed do eiusmod tempor.</p></li>
-								<li><a href="#">May 21, 2010</a><p>Ut enim ad minim veniam, quis<br />nostrud exercitation ullamco laboris nisiut aliquip.</p></li>
+								<li><a href="/developpeur.html">C'est quoi un developpeur ?</a></li>
+								<li><a href="/page_metrique.html">Métriques</a></li>
+								<li><a href="/page_metrique.html">Présentation DTA</a></li>
+								<li><a href="/page_metrique.html">Internet des Objets</a></li>
+								<li><a href="/page_metrique.html">Types des entreprises</a></li>
+								<li><a href="/page_metrique.html">Présentation de la formation</a></li>
+								<li><a href="/page_metrique.html">Ecosystème front-end</a></li>
+								<li><a href="/page_metrique.html">Ecosystème java</a></li>
+								<li><a href="/page_metrique.html">Page : Gestion de projet</a></li>
+								<li><a href="/page_metrique.html">NO-SQL</a></li>
+								<li><a href="/page_metrique.html">Robotique</a></li>
 							</ul>
-							<h3>Login Form</h3>
-							<form action="" id="login-form">
-								<fieldset>
-								<div class="field"><label>Username:</label><input type="text" /></div>
-								<div class="field"><label>Password:</label><input type="password" /></div>
-								<div class="field1"><a href="#" onclick="document.getElementById('login-form').submit()"><em><b>Log In</b></em></a><label>Remember Me</label>&nbsp;<input type="checkbox" /></div>
-								<ul>
-									<li><a href="#">Forgot your password?</a></li>
-									<li><a href="#">Register</a></li>
-								</ul>
-								</fieldset>
-							</form>
 						</div>
 						<div class="col-2">
 							<h3>Article Name</h3>
