--- a/index.html
+++ b/index.html
@@ -23,10 +23,6 @@
 			<div class="fright">
 				<ul>
 					<li><a href="home.html" class="active"><em><b>home</b></em></a></li>
-					<li><a href="about-us.html"><em><b>about us</b></em></a></li>
-					<li><a href="articles.html"><em><b>articles</b></em></a></li>
-					<li><a href="contact-us.html"><em><b>contact us</b></em></a></li>
-					<li><a href="sitemap.html"><em><b>site map</b></em></a></li>
 				</ul>
 			</div>
 		</div>
@@ -38,6 +34,22 @@
 			<div class="row-2">
 				<div class="indent3">
 					<div class="container">
+						<div class="col-1">
+							<h3>pages disponible</h3>
+							<ul class="news">
+								<li><a href="/developpeur.html">C'est quoi un developpeur ?</a></li>
+								<li><a href="/page_metrique.html">Métriques</a></li>
+								<li><a href="/page_metrique.html">Présentation DTA</a></li>
+								<li><a href="/page_metrique.html">Internet des Objets</a></li>
+								<li><a href="/page_metrique.html">Types des entreprises</a></li>
+								<li><a href="/page_metrique.html">Présentation de la formation</a></li>
+								<li><a href="/page_metrique.html">Ecosystème front-end</a></li>
+								<li><a href="/page_metrique.html">Ecosystème java</a></li>
+								<li><a href="/page_metrique.html">Page : Gestion de projet</a></li>
+								<li><a href="/page_metrique.html">NO-SQL</a></li>
+								<li><a href="/page_metrique.html">Robotique</a></li>
+							</ul>
+						</div>
 						<div class="col-2">
 							<h3>Présentation de la <b>Dream Team</b> du site</h3>
 							<div class="indent2">
