--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			<ul>
 				<li><a href="developpeur.html">C'est quoi un developpeur ?</a></li>
 				<li><a href="page_metrique.html">Métriques</a></li>
+				<li><a href="page_metrique.html">Les Métriques</a></li>
 				<li><a href="PresentationDTA.html">Présentation DTA</a></li>
 				<li><a href="iot.html">Internet des Objets</a></li>
 				<li><a href="types-entreprises.html">Types d'entreprises</a></li>
