--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 								<li><a href="/page_metrique.html">Métriques</a></li>
 								<li><a href="/page_metrique.html">Présentation DTA</a></li>
 								<li><a href="/page_metrique.html">Internet des Objets</a></li>
-								<li><a href="/page_metrique.html">Types des entreprises</a></li>
+								<li><a href="types-entreprises.html">Types des entreprises</a></li>
 								<li><a href="/page_metrique.html">Présentation de la formation</a></li>
 								<li><a href="/page_metrique.html">Ecosystème front-end</a></li>
 								<li><a href="/page_metrique.html">Ecosystème java</a></li>
