--- a/article.html
+++ b/article.html
@@ -19,10 +19,10 @@
 <!-- HEADER -->
 	<div id="header">
 		<div class="row-1">
-			<div class="fleft"><a href="home.html"><img src="images/logo.gif" alt="" /></a></div>
+			<div class="fleft"><a href="index.html"><img src="images/logoDTA2.png" width="100px" alt="" /></a></div>
 			<div class="fright">
 				<ul>
-					<li><a href="home.html"><em><b>home</b></em></a></li>
+					<li><a href="index.html"><em><b>home</b></em></a></li>
 				</ul>
 			</div>
 		</div>
@@ -46,7 +46,7 @@
 						<div class="col-1">
 							<h3>pages disponible</h3>
 							<ul class="news">
-								<li><a href="/developpeur.html">C'est quoi un developpeur ?</a></li>
+								<li><a href="developpeurs.html">C'est quoi un developpeur ?</a></li>
 								<li><a href="/page_metrique.html">Métriques</a></li>
 								<li><a href="/page_metrique.html">Présentation DTA</a></li>
 								<li><a href="/page_metrique.html">Internet des Objets</a></li>
