--- a/ecosysteme-java.html
+++ b/ecosysteme-java.html
@@ -2,9 +2,36 @@
 <html>
 	<head>
 		<title>Ecosysteme Java</title>
+		<link rel="stylesheet" type="text/css" href="style/default.css" />
+		<meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1" />
 	</head>
 	<body>
-		<h1>Ecosysteme Java</h1>
+		<h1>Ecosystème Java</h1>
+		
+		<h2>Présentation du back-end</h2>
+		<p>En informatique, le back-end désigne le code écrit coté serveur. <br/>
+		Il s'agit de la partie immergée de l'iceberg. Elle constitue la majeure partie du développement d'un projet informatique (par exemple, un site web). Elle sert d'espace d'administration pour les développeurs du projet. <br/>
+		
+		Le back-end peut être séparé en trois parties distinctes :
+		<ul>
+			<li>Un serveur (ou hébergement web)</li>
+			<li>Une application (en l’occurrence le site web)</li>
+			<li>Une base de données (ou l’on stocke les données de l’application)</li>
+		</ul>
+		
+		</p>
+		
+		<p>Le serveur est comme un disque dur accessible 24 heures sur 24, sur lequel les pages du site web sont enregistrées. </p>
+
+		<p>Pour pouvoir conserver vos mots de passe, vos préférences, votre panier d’achat que vous avez saisi grâce aux éléments de Front-End, il est nécessaire de les enregistrer dans une base de données. La base de données est comparable à un grand tableau avec des colonnes contenant par exemple «nom», «prénom», «mot de passe», «achat en cours». Lors de votre inscription sur un site, votre profil est enregistré dans ce tableau.
+Pour pouvoir conserver, traiter, modifier ces données et fournir des informations à jour sur un site internet (comme des actualités, des fiches produits, des images, des vidéos), le développeur Back-End va utiliser des langages de programmation «dynamique».
+		</p>
+		
+		<p>
+		Le back-end s'oppose au front-end (partie visible de l'iceberg) qui désigne la partie d'un logiciel visible par les utilisateurs. <br/>
+		
+		</p>
+		
 		
 		Quelques technologies back-end :
 		<ul>
