--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<div class="fleft"><a href="home.html"><img src="images/logoDTA2.png" width="100px" alt="" /></a></div>
 			<div class="fright">
 				<ul>
-					<li><a href="home.html" class="active"><em><b>home</b></em></a></li>
+					<li><a href="index.html" class="active"><em><b>home</b></em></a></li>
 				</ul>
 			</div>
 		</div>
@@ -41,7 +41,7 @@
 								<li><a href="/developpeur.html">C'est quoi un developpeur ?</a></li>
 								<li><a href="/page_metrique.html">Métriques</a></li>
 								<li><a href="/page_metrique.html">Présentation DTA</a></li>
-								<li><a href="/page_metrique.html">Internet des Objets</a></li>
+								<li><a href="/iot.html">Internet des Objets</a></li>
 								<li><a href="/page_metrique.html">Types des entreprises</a></li>
 								<li><a href="/page_metrique.html">Présentation de la formation</a></li>
 								<li><a href="/page_metrique.html">Ecosystème front-end</a></li>
