tentative de css sur l'image #17

--- a/robotique.html
+++ b/robotique.html
@@ -18,10 +18,10 @@
 			<li>Boutique d'applications où les développeurs vont pouvoir monétiser leurs
 applications</li>
 </ul>
-		
+		<div>
 		<a href="https://www.aldebaran.com/fr"><img src="image/Nao.JPG" alt="Robot Nao" style="width:304px;height:228px;"></a>
-		
-		
+		</div>
+		<div id="logo">Nao le petit robot<div/>	
 	</body>
 
 </html>
