--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<li><a href="presentation-formation.html">Présentation de la formation</a></li>
 				<li><a href="ecosysteme_front_end.html">Écosystème front-end</a></li>
 				<li><a href="ecosysteme-java.html">Écosystème Java</a></li>
-				<li><a href="Page_Methodo/PageMethodo.html">Page : Gestion de projet</a></li>
+				<li><a href="Page_Methodo/PageMethodo.html">Gestion de projet</a></li>
 				<li><a href="page_nosql.html">NO-SQL</a></li>
 				<li><a href="robotique.html">Robotique</a></li>
 			</ul>
