--- a/types-entreprises.html
+++ b/types-entreprises.html
@@ -48,7 +48,7 @@
 								<li><a href="developpeurs.html">C'est quoi un developpeur ?</a></li>
 								<li><a href="/page_metrique.html">Métriques</a></li>
 								<li><a href="/page_metrique.html">Présentation DTA</a></li>
-								<li><a href="/page_metrique.html">Internet des Objets</a></li>
+								<li><a href="iot.html">Internet des Objets</a></li>
 								<li><a href="types-entreprises.html">Types des entreprises</a></li>
 								<li><a href="/page_metrique.html">Présentation de la formation</a></li>
 								<li><a href="/page_metrique.html">Ecosystème front-end</a></li>
