--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 							<div class="indent2">
 								<ul class="logo-list">
 									<li><a href="#"><img src="images/extra-logo1.gif" alt="" /></a></li>
-									<li><a href="#"><img src="images/extra-logo2.gif" alt="" /></a></li>
+									<li><a href="https://github.com/DTAFormation/dtaformation.github.io/wiki/Valentin-MICHEL"><img src="image_wiki/photo_chat.jpg" alt="Valentin MICHEL" title="Valentin MICHEL" width="100px"/></a></li>
 									<li><a href="#"><img src="images/extra-logo3.gif" alt="" /></a></li>
 									<li><a href="#"><img src="images/extra-logo4.gif" alt="" /></a></li>
 									<li><a href="#"><img src="images/extra-logo3.gif" alt="" /></a></li>
