Lien template wiki #36

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 									<li><a href="#"><img src="images/extra-logo3.gif" alt="" /></a></li>
 									<li><a href="#"><img src="images/extra-logo4.gif" alt="" /></a></li>
 									<li><a href="#"><img src="images/extra-logo3.gif" alt="" /></a></li>
-									<li><a href="#"><img src="images/extra-logo4.gif" alt="" /></a></li>
+									<li><a href="https://github.com/DTAFormation/dtaformation.github.io/wiki/nicolas-jezequel"><img src="image_wiki/paresseux.jpg" alt="Nicolas Jezequel" title="Nicolas Jezequel" width="100px"/></a></li>
 								</ul>
 								<ul class="logo-list">
 									<li><a href="#"><img src="images/extra-logo1.gif" alt="" /></a></li>
